--- a/src/bioregistry/app/templates/base.html
+++ b/src/bioregistry/app/templates/base.html
@@ -37,6 +37,12 @@
                     padding-bottom: 2em;
                     background-color: #f5f5f5;
                 }
+                dl {
+                    margin-bottom: 0;
+                }
+                dl dd:last-child {
+                    margin-bottom: 0;
+                }
             </style>
         {% endblock %}
 
